cmake_minimum_required(VERSION 3.25)
project(Learn)

set(CMAKE_CXX_STANDARD 17)

add_library(Learn library.cpp study_01/Operation.h study_01/Operation.cpp study_01/IfTest.h study_01/IfTest.cpp study_01/SanmuTest.cpp study_01/DoWhileTest.h study_01/ForTest.h study_01/ForTest.cpp study_01/ArrayTest1.h study_01/ArrayTest1.cpp study_01/TwoArray.h study_01/TwoArray.cpp study_01/Functiontest1.h study_01/Functiontest1.cpp study_01/MaxFunction.cpp study_01/FunctionSplitTest.cpp study_01/swap.cpp study_01/swap.h study_01/PointTest1.cpp study_01/PointTest1.h study_01/PointAndArr.cpp study_01/PointAndArr.h study_01/PointAndArr.h study_01/PointAndFunction.cpp study_01/PointAndFunction.h)
